add profile pic

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                             <div class="profile-content">
                                 <h3 class="profile-title">Taketo Matsunaga</h3>
                                 <p class="profile-description">Full Stack Developer / Data Scientist</p>
+                                <p>IBM Japan Ltd</p>
                             </div>
                         </div>
                     </div>
@@ -56,10 +57,11 @@
         <div class="sidebar-menu hidden-xs hidden-sm">
             <div class="top-section">
                 <div class="profile-image">
-                    <img src="img/profile.jpg" alt="Volton">
+                    <img src="img/profile.png" alt="Volton">
                 </div>
-                <h3 class="profile-title">Volton</h3>
-                <p class="profile-description">Digital Photography</p>
+                <h3 class="profile-title">Taketo Matsunaga</h3>
+                <p class="profile-description">Full Stack Developer / Data Scientist</p>
+                <p>IBM Japan Ltd</p>
             </div> <!-- top-section -->
             <div class="main-navigation">
                 <ul class="navigation">
